--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h4>Print</h4>
           </section>
         </a>
-        <img src="img/monster-home.svg" alt="tree">
+        <img src="img/monster-home.png" alt="tree">
       </div>
     </div>
 
@@ -164,7 +164,7 @@
             <h4>Print</h4>
           </section>
         </a>
-        <img src="img/shotgun-home.svg" alt="tree">
+        <img src="img/shotgun-home.png" alt="tree">
       </div>
     </div>
 
