--- a/projects/bebs-jam.html
+++ b/projects/bebs-jam.html
@@ -51,16 +51,30 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/bebs1.jpg" alt="beb's jam packaging">
+      <img data-interchange="[../img/bebs1-small.jpg, (default)], [../img/bebs1.jpg, (medium)], [../img/bebs1.jpg, (large)]" alt="beb's jam packaging">
       <p>I was able to create a cohesive line of labels that called attention to the rustic home-town of the founding couple.</p>
     </div>
   </div>
+
+  <div class="row show-for-small-only">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img data-interchange="[../img/bebs2-small.jpg, (default)], [../img/bebs1.jpg, (medium)], [../img/bebs1.jpg, (large)]" alt="beb's jam packaging">
+    </div>
+  </div>
+
+  <div class="row show-for-small-only">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img data-interchange="[../img/bebs3-small.jpg, (default)], [../img/bebs1.jpg, (medium)], [../img/bebs1.jpg, (large)]" alt="beb's jam packaging">
+    </div>
+  </div>
+
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
       <img src="../img/bebs2.jpg" alt="beb's jam packaging">
     </div>
   </div>
+
   <div class="row project-nav">
     <div class="large-6 medium-6 columns"><a href="shotgun-weddings.html" class="button expand"><h5>PREVIOUS</h5></a></div>
     <div class="large-6 medium-6 columns"><a href="greasy-garage.html" class="button expand"><h5>NEXT</h5></a></div>
@@ -87,6 +101,8 @@
 <script src="../js/vendor/jquery.js"></script>
 
 <script src="../js/foundation.min.js"></script>
+
+<script src="../js/foundation/foundation.interchange.js"></script>
 
 <script>
   $(document).foundation();
