--- a/projects/nra.html
+++ b/projects/nra.html
@@ -52,7 +52,7 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/nra1.jpg" alt="national rifle association">
+      <img data-interchange="[../img/nra1-small.jpg, (default)], [../img/nra1.jpg, (medium)], [../img/nra1.jpg, (large)]" alt="national rifle association">
     </div>
   </div>
 
@@ -98,6 +98,8 @@
 <script src="../js/vendor/jquery.js"></script>
 
 <script src="../js/foundation.min.js"></script>
+
+<script src="../js/foundation/foundation.interchange.js"></script>
 
 <script>
   $(document).foundation();
