--- a/projects/pinnacle.html
+++ b/projects/pinnacle.html
@@ -51,19 +51,37 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/pinnacle1.jpg" alt="pinnacle bank arena mobile app">
+      <img data-interchange="[../img/pinnacle1-small.jpg, (default)], [../img/pinnacle1.jpg, (medium)], [../img/pinnacle1.jpg, (large)]" alt="pinnacle bank arena mobile app">
+    </div>
+  </div>
+
+  <div class="row show-for-small-only">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img data-interchange="[../img/pinnacle2-small.jpg, (default)], [../img/pinnacle1.jpg, (medium)], [../img/pinnacle1.jpg, (large)]" alt="pinnacle bank arena mobile app">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/pinnacle2.jpg" alt="pinnacle bank arena mobile app">
+      <img data-interchange="[../img/pinnacle3-small.jpg, (default)], [../img/pinnacle2.jpg, (medium)], [../img/pinnacle2.jpg, (large)]" alt="pinnacle bank arena mobile app">
+    </div>
+  </div>
+
+  <div class="row show-for-small-only">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img data-interchange="[../img/pinnacle4-small.jpg, (default)], [../img/pinnacle2.jpg, (medium)], [../img/pinnacle2.jpg, (large)]" alt="pinnacle bank arena mobile app">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/pinnacle3.jpg" alt="pinnacle bank arena mobile app">
+      <img data-interchange="[../img/pinnacle5-small.jpg, (default)], [../img/pinnacle3.jpg, (medium)], [../img/pinnacle3.jpg, (large)]" alt="pinnacle bank arena mobile app">
+    </div>
+  </div>
+
+  <div class="row show-for-small-only">
+    <div class="large-12 medium-12 small-12 column project-img">
+      <img data-interchange="[../img/pinnacle6-small.jpg, (default)], [../img/pinnacle3.jpg, (medium)], [../img/pinnacle3.jpg, (large)]" alt="pinnacle bank arena mobile app">
     </div>
   </div>
 
@@ -95,6 +113,8 @@
 <script src="../js/vendor/jquery.js"></script>
 
 <script src="../js/foundation.min.js"></script>
+
+<script src="../js/foundation/foundation.interchange.js"></script>
 
 <script>
   $(document).foundation();
