--- a/projects/starbucks.html
+++ b/projects/starbucks.html
@@ -54,7 +54,7 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/starbucks1.jpg" alt="starbucks coffee report">
+      <img data-interchange="[../img/starbucks1-small.jpg, (default)], [../img/starbucks1.jpg, (medium)], [../img/starbucks1.jpg, (large)]" alt="starbucks coffee report">
     </div>
   </div>
 
@@ -130,6 +130,8 @@
 <script src="../js/vendor/jquery.js"></script>
 
 <script src="../js/foundation.min.js"></script>
+
+<script src="../js/foundation/foundation.interchange.js"></script>
 
 <script>
   $(document).foundation();
