--- a/projects/afan.html
+++ b/projects/afan.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <link rel="stylesheet" type="text/css" href="../css/fonts/stylesheet.css"/>
     <script src="../js/vendor/modernizr.js"></script>
+
   </head>
   <body>
 
@@ -53,8 +54,7 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-            <!--<img data-interchange="[../img/afan1.jpg, (medium)], [../img/afan1-small.jpg, (small)]"> -->
-      <img src="../img/afan1.jpg" alt="alliance for the future of agriculture cover">
+     <img data-interchange="[../img/afan1-small.jpg, (default)], [../img/afan1.jpg, (medium)], [../img/afan1.jpg, (large)]" alt="alliance for the future of agriculture cover">
     </div>
   </div>
 
@@ -102,6 +102,9 @@
 <script src="../js/vendor/jquery.js"></script>
 
 <script src="../js/foundation.min.js"></script>
+
+<script src="../js/foundation/foundation.interchange.js"></script>
+
 
 <script>
   $(document).foundation();
