Buttons, <hr>, Icons
Fixed the appearance of the nav buttons on all project pages. Fixed the
horizontal rule overlapping issue on all project pages. Implemented
interchange on home page icons, although there is a glitch at
640/641px. Headers on home page are responsive. Working on transitions
for hover states.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div> 
 
     <div class="row">
-      <div class="large-6 medium-6 large-offset-6 medium-offset-6 columns">
+      <div class="large-11 medium-11 large-offset-1 medium-offset-1 columns">
         <div id="mydrive"><h2>WHAT DRIVES ME</h2></div>
       </div>
     </div>
@@ -230,17 +230,17 @@
 
   <div class="row">
     <div class="large-4 medium-4 column clear-padding icons">
-      <img src="img/type-icon.svg" alt="typography">
+      <img data-interchange="[img/type-icon-small.svg, (default)], [img/type-icon.svg, (medium)], [img/type-icon.svg, (large)]" alt="typography design">
       <h5>Typography</h5>
     </div>
 
     <div class="large-4 medium-4 column clear-padding icons">
-      <img src="img/print-icon.svg" alt="print design">
+      <img data-interchange="[img/print-icon-small.svg, (default)], [img/print-icon.svg, (medium)], [img/print-icon.svg, (large)]" alt="print layout design">
       <h5>Print</h5>
     </div>
 
     <div class="large-4 medium-4 column clear-padding icons">
-      <img src="img/photography-icon.svg" alt="photography">
+      <img data-interchange="[img/photography-icon-small.svg, (default)], [img/photography-icon.svg, (medium)], [img/photography-icon.svg, (large)]" alt="photography design">
       <h5>Photography</h5>
     </div>
   </div>
