--- a/projects/greasy-garage.html
+++ b/projects/greasy-garage.html
@@ -34,17 +34,18 @@
       <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
       <div class="large-10 medium-10 small-10 columns">
         <h3 id="project-header">Greasy Garage</h3>
+        <div class="large-12 medium-12 hide-for-small-only columns"><hr></div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="large-12 medium-12 columns"><hr></div>
+    <div class="row show-for-small-only">
+      <div class="large-12 medium-12 columns small-hr"><hr></div>
     </div>
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h6>Logo and Style Guide: </h6><p id="inline-text">Print</p>
-        <p>Greasy Garage Custom Motorcyles is an emerging company run by sole-proprietor, Duane Niedner. Greasy Garage needed a new identity that reflected the custom work the shop does and appealed to Generation X, those most likely looking to restore a motorcycle.</p>
+        <p>Greasy Garage Custom Motorcyles is an emerging company run by sole-proprietor, Duane Niedner. Greasy Garage needed a new identity that reflected the custom work the shop does and appealed to men ages 35—50, those most likely looking to restore a motorcycle.</p>
       </div>
     </div> 
 
@@ -83,8 +84,8 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="bebs-jam.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="pinnacle.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="bebs-jam.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="pinnacle.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
