--- a/projects/pups-paws.html
+++ b/projects/pups-paws.html
@@ -34,17 +34,18 @@
       <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
       <div class="large-10 medium-10 small-10 columns">
         <h3 id="project-header">Pup's Paws</h3>
+        <div class="large-12 medium-12 hide-for-small-only columns"><hr></div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="large-12 medium-12 columns"><hr></div>
+    <div class="row show-for-small-only">
+      <div class="large-12 medium-12 columns small-hr"><hr></div>
     </div>
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h6>Product Branding and Package Development: </h6><p id="inline-text">Print</p>
-        <p>Founded in a small-town shoppe, Pup’s Paws is a newly emerging dog food and supply company that was looking for an identity and packaging system that better expressed their standards. They were looking to attract health concious Millenials by using a natural process to produce all items and food.</p>
+        <p>Founded in a small-town shoppe, Pup’s Paws is a start-up dog food and supply company that was looking for an identity and packaging system that better expressed their standards. They were looking to attract health conscious Millenials by using a natural process to produce all items and food.</p>
       </div>
     </div> 
 
@@ -75,8 +76,8 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="afan.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="monster.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="afan.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="monster.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
