--- a/projects/afan.html
+++ b/projects/afan.html
@@ -36,17 +36,18 @@
       <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
       <div class="large-10 medium-10 small-10 columns">
         <h3 id="project-header">Alliance for the Future of Agriculture in Nebraska (A-FAN)</h3>
+        <div class="large-12 medium-12 hide-for-small-only columns"><hr></div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="large-12 medium-12 columns"><hr></div>
+    <div class="row show-for-small-only">
+      <div class="large-12 medium-12 columns small-hr"><hr></div>
     </div>
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h6>Promotional Booklet: </h6> <p id="inline-text">Photography, Print</p>
-        <p>A-FAN is a non-profit organization in Nebraska that helps boost Nebraskan’s knowledge about popular farming topics. The company was looking for a booklet that specifically showed the benefits of farming livestock to males ranging between ages 18 and 28.</p>
+        <p>A-FAN is a non-profit organization in Nebraska that helps boost Nebraskan’s knowledge about popular farming topics. The company was looking for a booklet that specifically showed the benefits of farming livestock to males ranging between ages 18 and 28 in order to boost interest in Nebraska agriculture.</p>
       </div>
       </div>
 
@@ -78,8 +79,8 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="pinnacle.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="pups-paws.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="pinnacle.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="pups-paws.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 
