--- a/projects/heartland.html
+++ b/projects/heartland.html
@@ -35,17 +35,18 @@
       <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
       <div class="large-10 medium-10 small-10 columns">
         <h3 id="project-header">Heartland Autobody</h3>
+        <div class="large-12 medium-12 hide-for-small-only columns"><hr></div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="large-12 medium-12 columns"><hr></div>
+    <div class="row show-for-small-only">
+      <div class="large-12 medium-12 columns small-hr"><hr></div>
     </div>
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h6>Web Layout Design: </h6><p id="inline-text">Web</p>
-        <p>Heartland Autobody offers complete collision repair services for all makes and models, foreign or domestic. The current website design is very generic and does not reflect who the company is and what they do. They needed a website that was easily accessible across all platforms and sizes to appeal to the tech-savvy Generation Y. </p>
+        <p>Heartland Autobody offers complete collision repair services for all makes and models, foreign or domestic. The current website design is very generic and does not reflect who the company is and what they do. They needed a website that was easily accessible across all platforms and sizes to appeal to the tech-savvy 18—33 year olds. </p>
       </div>
     </div> 
 
@@ -90,8 +91,8 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="monster.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="starbucks.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="monster.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="starbucks.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
