--- a/projects/nra.html
+++ b/projects/nra.html
@@ -35,11 +35,12 @@
       <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
       <div class="large-10 medium-10 small-10 columns">
         <h3 id="project-header">National Rifle Association</h3>
+        <div class="large-12 medium-12 hide-for-small-only columns"><hr></div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="large-12 medium-12 columns"><hr></div>
+    <div class="row show-for-small-only">
+      <div class="large-12 medium-12 columns small-hr"><hr></div>
     </div>
 
     <div class="row">
@@ -77,8 +78,8 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="maroon5.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="shotgun-weddings.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="maroon5.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="shotgun-weddings.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
