--- a/projects/shotgun-weddings.html
+++ b/projects/shotgun-weddings.html
@@ -34,17 +34,18 @@
       <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
       <div class="large-10 medium-10 small-10 columns">
         <h3 id="project-header">Shotgun Weddings</h3>
+        <div class="large-12 medium-12 hide-for-small-only columns"><hr></div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="large-12 medium-12 columns"><hr></div>
+    <div class="row show-for-small-only">
+      <div class="large-12 medium-12 columns small-hr"><hr></div>
     </div>
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h6>Identity: </h6><p id="inline-text">Print</p>
-        <p>Shotgun Weddings is a newly emerging company trying to establish themselves within Lincoln, Nebraska. Providing ceremonial services along with the opportunity to shoot and take pictures with the guns, this company is trying to appeal to the younger Generation Y, who are most likely to get married under quick circumstances.</p>
+        <p>Shotgun Weddings is an emerging company trying to establish themselves within Lincoln, Nebraska. Providing ceremonial services along with the opportunity to shoot and take pictures with the guns, this company is trying to appeal to the younger Generation Y, who are most likely to get married under quick circumstances.</p>
       </div>
     </div> 
 
@@ -63,8 +64,8 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="nra.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="bebs-jam.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="nra.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="bebs-jam.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
