--- a/projects/starbucks.html
+++ b/projects/starbucks.html
@@ -37,17 +37,18 @@
       <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
       <div class="large-10 medium-10 small-10 columns">
         <h3 id="project-header">Starbucks</h3>
+        <div class="large-12 medium-12 hide-for-small-only columns"><hr></div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="large-12 medium-12 columns"><hr></div>
+    <div class="row show-for-small-only">
+      <div class="large-12 medium-12 columns small-hr"><hr></div>
     </div>
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h6>Annual Report: </h6><p id="inline-text">Photography, Print</p>
-        <p>Starbucks, a national coffeehouse chain, was in need of an annual report that reflected the company’s long lasting reputation as a hip, sheek, and classy location to get gourmet coffee. This reputation is earned from the strong reaction to the decor and contemporary design by the target audience of men and women, ages 25—40.</p>
+        <p>Starbucks, a national coffeehouse chain, was in need of an annual report that reflected the company’s long lasting reputation as a hip, chic, and classy location to get gourmet coffee. The target audience of men and women, ages 25—40, react to the decor and contemporary design and this will enhance interest in investment.</p>
       </div>
     </div> 
 
@@ -108,8 +109,8 @@
 
 
   <div class="row project-nav">
-    <div class="large-6 medium-6 columns"><a href="heartland.html" class="button expand"><h5>PREVIOUS</h5></a></div>
-    <div class="large-6 medium-6 columns"><a href="hyvee.html" class="button expand"><h5>NEXT</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="heartland.html" class="button expand"><h5>PREVIOUS</h5></a></div>
+    <div class="large-6 medium-6 small-6 columns"><a href="hyvee.html" class="button expand"><h5>NEXT</h5></a></div>
   </div>
 
 <footer>
