--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfolio website of Graphic Designer, Dakotah Nicole Buchli (Editionh). Specialize in typography, photography, and print layout—expanding knowledge as a web designer and developer.">
+    <meta name="keywords" content="Typography,Photography,Print Layout,Graphic Design,Minimal,HTML,CSS,">
+    <meta name="author" content="Dakotah Buchli">
     <title>editionh</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="css/custom.css"/>
     <link rel="stylesheet" type="text/css" href="css/fonts/stylesheet.css"/>
+
+    <link rel="shortcut icon" type="image/png" href="img/logo-tab.png">
 
     <script src="js/vendor/modernizr.js"></script>
   </head>
@@ -15,9 +20,9 @@
 
 <!-- Off Canvas Menu -->
 <nav id="menu">
-    <a href="#menu" class="menu-link"><img src="img/menu-icon.svg" alt="menu"></a>
+    <a href="#menu" class="menu-link"><img src="img/menu-icon.png" alt="toggle menu"></a>
         <ul>
-          <li><img src="img/logo-color.svg" alt="logo"></li>
+          <li><a class="sub-link" href="index.html"><img src="img/logo-color.svg" alt="logo"></a></li>
           <li><a class="sub-link" href="#">HOME</a></li>
           <li><a class="sub-link" href="#thepassion">THE PASSION</a></li>
           <li><a class="sub-link" href="#justme">JUST ME</a></li>
@@ -60,7 +65,7 @@
             <h4>Photography, Print</h4>
           </section>
         </a>
-        <img src="img/afan-home.jpg" alt="tree">
+        <img src="img/afan-home.jpg" alt="alliance for the future of agriculture; print layout, photography, infographics">
       </div>
     </div>  
 
@@ -73,7 +78,7 @@
             <h4>Package</h4>
           </section>
         </a>
-        <img src="img/pups-paws-home.jpg" alt="tree">
+        <img src="img/pups-paws-home.jpg" alt="pup's paws package design; handwritten typography, custom design">
       </div>
     </div>
 
@@ -86,7 +91,7 @@
             <h4>Print</h4>
           </section>
         </a>
-        <img src="img/monster-home.png" alt="tree">
+        <img src="img/monster-home.png" alt="mommy's little monster logo design; identity system">
       </div>
     </div>
 
@@ -99,7 +104,7 @@
             <h4>Web</h4>
           </section>
         </a>
-        <img src="img/heartland-home.jpg" alt="tree">
+        <img src="img/heartland-home.jpg" alt="heartland autobody responsive web design">
       </div>
     </div>
 
@@ -112,7 +117,7 @@
             <h4>Photography, Print</h4>
           </section>
         </a>
-        <img src="img/starbucks-home.jpg" alt="tree">
+        <img src="img/starbucks-home.jpg" alt="starbucks coffee annual report; print layout, photography, infographics">
       </div>
     </div>
 
@@ -125,7 +130,7 @@
             <h4>Photography, Web, Print</h4>
           </section>
         </a>
-        <img src="img/hyvee-home.jpg" alt="tree">
+        <img src="img/hyvee-home.jpg" alt="hy-vee floral ad campaign; typography, photography">
       </div>
     </div>
 
@@ -138,7 +143,7 @@
             <h4>Print</h4>
           </section>
         </a>
-        <img src="img/maroon5-home.jpg" alt="tree">
+        <img src="img/maroon5-home.jpg" alt="maroon5 tour booklet; experimental typography, print layout">
       </div>
     </div>
 
@@ -151,7 +156,7 @@
             <h4>Promotional, Print</h4>
           </section>
         </a>
-        <img src="img/nra-home.jpg" alt="tree">
+        <img src="img/nra-home.jpg" alt="national rifle association; illustration, social activism">
       </div>
     </div>
 
@@ -164,7 +169,7 @@
             <h4>Print</h4>
           </section>
         </a>
-        <img src="img/shotgun-home.png" alt="tree">
+        <img src="img/shotgun-home.png" alt="shotgun weddings logo; identity">
       </div>
     </div>
 
@@ -177,7 +182,7 @@
             <h4>Package</h4>
           </section>
         </a>
-        <img src="img/bebs-jam-home.jpg" alt="tree">
+        <img src="img/bebs-jam-home.jpg" alt="beb's jam packaging; identity">
       </div>
     </div>
 
@@ -190,7 +195,7 @@
             <h4>Print</h4>
           </section>
         </a>
-        <img src="img/greasy-garage-home.png" alt="tree">
+        <img src="img/greasy-garage-home.png" alt="greasy garage logo; identity system, style guide print layout">
       </div>
     </div>
 
@@ -203,7 +208,7 @@
             <h4>Mobile</h4>
           </section>
         </a>
-        <img src="img/pinnacle-home.jpg" alt="tree">
+        <img src="img/pinnacle-home.jpg" alt="pinnacle bank area mobile design; ticket application">
       </div>
     </div>
     
@@ -254,7 +259,7 @@
 
     <div class="row">
       <div class="large-3 medium-3 large-offset-1 medium-offset-1 column">
-        <p>I would love to answer any questions you might have or just chat about design. Drop me a line and I will be sure to contact you!</p>
+        <p>I would love to answer any questions you might have or just chat about design. Drop me a line and I will be sure to contact you! If you'd rather e-mail, please contact me at info@dakotahnicole.com.</p>
       </div>
 
         <form>
