--- a/projects/starbucks.html
+++ b/projects/starbucks.html
@@ -34,7 +34,7 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
+      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg" alt="logo"></a></div>
       <div class="large-10 medium-10 small-10 columns">
         <h3 id="project-header">Starbucks</h3>
         <div class="large-12 medium-12 hide-for-small-only columns"><hr></div>
@@ -55,55 +55,55 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img data-interchange="[../img/starbucks1-small.jpg, (default)], [../img/starbucks1.jpg, (medium)], [../img/starbucks1.jpg, (large)]" alt="starbucks coffee report">
+      <img data-interchange="[../img/starbucks1-small.jpg, (default)], [../img/starbucks1.jpg, (medium)], [../img/starbucks1.jpg, (large)]" alt="starbucks coffee report, print layout, infographics">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/starbucks2.jpg" alt="starbucks coffee report">
+      <img src="../img/starbucks2.jpg" alt="starbucks coffee report, print layout, infographics">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/starbucks3.jpg" alt="starbucks coffee report">
+      <img src="../img/starbucks3.jpg" alt="starbucks coffee report, print layout, infographics">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/starbucks4.jpg" alt="starbucks coffee report">
+      <img src="../img/starbucks4.jpg" alt="starbucks coffee report, print layout, infographics">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/starbucks5.jpg" alt="starbucks coffee report">
+      <img src="../img/starbucks5.jpg" alt="starbucks coffee report, print layout, infographics">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/starbucks6.jpg" alt="starbucks coffee report">
+      <img src="../img/starbucks6.jpg" alt="starbucks coffee report, print layout, infographics">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/starbucks7.jpg" alt="starbucks coffee report">
+      <img src="../img/starbucks7.jpg" alt="starbucks coffee report, print layout, infographics">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/starbucks8.jpg" alt="starbucks coffee report">
+      <img src="../img/starbucks8.jpg" alt="starbucks coffee report, print layout, infographics">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/starbucks9.jpg" alt="starbucks coffee report">
+      <img src="../img/starbucks9.jpg" alt="starbucks coffee report, print layout, infographics">
     </div>
   </div>
 
