Finalized Pieces, Fixed Bugs
Fixed all bugs in Firefox, added tab icon to all pages, improved “alt”
tags, included interchange for xlarge screens, organized/cleaned up css
and html, validated all pages (only issue is the interchange ‘src’
missing attribute). Should be ready to go live unless I think of
something I need to work on tomorrow.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <ul>
           <li><a class="sub-link" href="index.html"><img src="img/logo-color.svg" alt="logo"></a></li>
           <li><a class="sub-link" href="#">HOME</a></li>
-          <li><a class="sub-link" href="#thepassion">THE PASSION</a></li>
+          <li><a class="sub-link" href="#thepassion">MY PASSION</a></li>
           <li><a class="sub-link" href="#justme">JUST ME</a></li>
-          <li><a class="sub-link" href="#mydrive">MY DRIVE</a></li>
+          <li><a class="sub-link" href="#mydrive">WHAT DRIVES ME</a></li>
           <li><a class="sub-link" href="#talkdesign">LET'S TALK DESIGN</a></li>
         </ul>
 </nav>
@@ -37,7 +37,7 @@
 
 
 
-   <div class="row">
+  <div class="row">
       <div class="large-8 medium-8 large-offset-1 medium-offset-1 small-2 logo columns">
         <img src="img/logo.svg" alt="logo">
       </div>
@@ -45,12 +45,12 @@
       <div class="large-5 medium-5 large-offset-6 medium-offset-6 small-10 columns end the-passion">
         <p>What does it mean to design? It means everday I get to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and chances to grow. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—edition<b>h</b>.</p>
       </div>
-    </div> 
+  </div> 
 
 
     <div class="row">
       <div class="large-6 medium-6 large-offset-6 medium-offset-6 columns">
-        <div id="thepassion"><h2>MY PASSION</h2></div>
+        <div id="thepassion"><h1>MY PASSION</h1></div>
       </div>
     </div> 
 
@@ -65,7 +65,7 @@
             <h4>Photography, Print</h4>
           </section>
         </a>
-        <img src="img/afan-home.jpg" alt="alliance for the future of agriculture; print layout, photography, infographics">
+        <img data-interchange="[img/afan-home.jpg, (default)], [img/afan-home-large.jpg, (xlarge)]" alt="alliance for the future of agriculture; print layout, photography, infographics">
       </div>
     </div>  
 
@@ -78,7 +78,7 @@
             <h4>Package</h4>
           </section>
         </a>
-        <img src="img/pups-paws-home.jpg" alt="pup's paws package design; handwritten typography, custom design">
+         <img data-interchange="[img/pups-paws-home.jpg, (default)], [img/pups-paws-home-large.jpg, (xlarge)]" alt="pup's paws package design; handwritten typography, custom design">
       </div>
     </div>
 
@@ -91,7 +91,7 @@
             <h4>Print</h4>
           </section>
         </a>
-        <img src="img/monster-home.png" alt="mommy's little monster logo design; identity system">
+        <img data-interchange="[img/monster-home.png, (default)], [img/monster-home-large.png, (xlarge)]" alt="mommy's little monster logo design; identity system">
       </div>
     </div>
 
@@ -104,7 +104,7 @@
             <h4>Web</h4>
           </section>
         </a>
-        <img src="img/heartland-home.jpg" alt="heartland autobody responsive web design">
+        <img data-interchange="[img/heartland-home.jpg, (default)], [img/heartland-home-large.jpg, (xlarge)]" alt="heartland autobody responsive web design">
       </div>
     </div>
 
@@ -117,7 +117,7 @@
             <h4>Photography, Print</h4>
           </section>
         </a>
-        <img src="img/starbucks-home.jpg" alt="starbucks coffee annual report; print layout, photography, infographics">
+        <img data-interchange="[img/starbucks-home.jpg, (default)], [img/starbucks-home-large.jpg, (xlarge)]" alt="starbucks coffee annual report; print layout, photography, infographics">
       </div>
     </div>
 
@@ -130,7 +130,7 @@
             <h4>Photography, Web, Print</h4>
           </section>
         </a>
-        <img src="img/hyvee-home.jpg" alt="hy-vee floral ad campaign; typography, photography">
+         <img data-interchange="[img/hyvee-home.jpg, (default)], [img/hyvee-home-large.jpg, (xlarge)]" alt="hy-vee floral ad campaign; typography, photography">
       </div>
     </div>
 
@@ -143,7 +143,7 @@
             <h4>Print</h4>
           </section>
         </a>
-        <img src="img/maroon5-home.jpg" alt="maroon5 tour booklet; experimental typography, print layout">
+        <img data-interchange="[img/maroon5-home.jpg, (default)], [img/maroon5-home-large.jpg, (xlarge)]" alt="maroon5 tour booklet; experimental typography, print layout">
       </div>
     </div>
 
@@ -156,7 +156,7 @@
             <h4>Promotional, Print</h4>
           </section>
         </a>
-        <img src="img/nra-home.jpg" alt="national rifle association; illustration, social activism">
+        <img data-interchange="[img/nra-home.jpg, (default)], [img/nra-home-large.jpg, (xlarge)]" alt="national rifle association; illustration, social activism">
       </div>
     </div>
 
@@ -169,7 +169,7 @@
             <h4>Print</h4>
           </section>
         </a>
-        <img src="img/shotgun-home.png" alt="shotgun weddings logo; identity">
+        <img data-interchange="[img/shotgun-home.png, (default)], [img/shotgun-home-large.png, (xlarge)]" alt="shotgun weddings logo; identity">
       </div>
     </div>
 
@@ -182,7 +182,7 @@
             <h4>Package</h4>
           </section>
         </a>
-        <img src="img/bebs-jam-home.jpg" alt="beb's jam packaging; identity">
+        <img data-interchange="[img/bebs-jam-home.jpg, (default)], [img/bebs-jam-home-large.jpg, (xlarge)]" alt="beb's jam packaging; identity">
       </div>
     </div>
 
@@ -195,7 +195,7 @@
             <h4>Print</h4>
           </section>
         </a>
-        <img src="img/greasy-garage-home.png" alt="greasy garage logo; identity system, style guide print layout">
+        <img data-interchange="[img/greasy-garage-home.png, (default)], [img/greasy-garage-home-large.png, (xlarge)]" alt="greasy garage logo; identity system, style guide print layout">
       </div>
     </div>
 
@@ -208,7 +208,7 @@
             <h4>Mobile</h4>
           </section>
         </a>
-        <img src="img/pinnacle-home.jpg" alt="pinnacle bank area mobile design; ticket application">
+        <img data-interchange="[img/pinnacle-home.jpg, (default)], [img/pinnacle-home-large.jpg, (xlarge)]" alt="pinnacle bank area mobile design; ticket application">
       </div>
     </div>
     
@@ -216,7 +216,7 @@
 
     <div class="row">
       <div class="large-11 medium-11 large-offset-1 medium-offset-1 columns">
-        <div id="justme"><h2>JUST ME</h2></div>
+        <div id="justme"><h1>JUST ME</h1></div>
       </div>
     </div>
 
@@ -228,10 +228,9 @@
 
     <div class="row">
       <div class="large-11 medium-11 large-offset-1 medium-offset-1 columns">
-        <div id="mydrive"><h2>WHAT DRIVES ME</h2></div>
+        <div id="mydrive"><h1>WHAT DRIVES ME</h1></div>
       </div>
     </div>
-
 
   <div class="row">
     <div class="large-4 medium-4 column clear-padding icons">
@@ -252,32 +251,28 @@
 
     <div class="row">
       <div class="large-11 medium-11 large-offset-1 medium-offset-1 columns">
-        <div id="talkdesign"><h2>LET'S TALK DESIGN</h2></div>
+        <div id="talkdesign"><h1>LET'S TALK DESIGN</h1></div>
       </div>
     </div>
 
-
-    <div class="row">
+  <div class="row">
       <div class="large-3 medium-3 large-offset-1 medium-offset-1 column">
         <p>I would love to answer any questions you might have or just chat about design. Drop me a line and I will be sure to contact you! If you'd rather e-mail, please contact me at info@dakotahnicole.com.</p>
       </div>
 
         <form>
           <div class="large-6 medium-6 large-offset-1 medium-offset-1 columns contact-form end">
-            <label><h5>E-mail</h5>
+            <label>E-mail
             <input type="text" placeholder="example@example.com" />
             </label>
 
-            <label><h5>How can I help?</h5></label>
+            <label>How can I help?</label>
             <textarea placeholder=""></textarea>
 
             <a href="#" class="button expand"><h5>Submit</h5></a>
           </div>
         </form>
     </div>
-
-
-
 
 <footer>
   <div class="row">
@@ -286,7 +281,6 @@
     <div class="large-4 medium-4 columns"><p>402.641.3518</p></div>
   </div>
 </footer>
-
 
 <!-- close the body container -->
 </div>
@@ -336,5 +330,7 @@
     });
 </script>
 
-  </body>
+
+
+</body>
 </html>
