--- a/projects/heartland.html
+++ b/projects/heartland.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <link rel="stylesheet" type="text/css" href="../css/fonts/stylesheet.css"/>
+
+    <link rel="shortcut icon" type="image/png" href="../img/logo-tab.png">
+    
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -15,13 +18,13 @@
 
 <!-- Off Canvas Menu -->
 <nav id="menu">
-    <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
+    <a href="#menu" class="menu-link"><img src="../img/menu-icon.png" alt="menu"></a>
         <ul>
           <li><a class="sub-link" href="../index.html"><img src="../img/logo-color.svg" alt="logo"></a></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
-          <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
+          <li><a class="sub-link" href="../index.html#thepassion">MY PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
-          <li><a class="sub-link" href="../index.html#mydrive">MY DRIVE</a></li>
+          <li><a class="sub-link" href="../index.html#mydrive">WHAT DRIVES ME</a></li>
           <li><a class="sub-link" href="../index.html#talkdesign">LET'S TALK DESIGN</a></li>
         </ul>
 </nav>
@@ -32,9 +35,9 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
+      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg" alt="logo"></a></div>
       <div class="large-10 medium-10 small-10 columns">
-        <h3 id="project-header">Heartland Autobody</h3>
+        <h2>Heartland Autobody</h2>
         <div class="large-12 medium-12 hide-for-small-only columns"><hr></div>
       </div>
     </div>
@@ -53,37 +56,37 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/heartland1.jpg" alt="heartland autobody web">
+      <img src="../img/heartland1.jpg" alt="heartland autobody web design">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/heartland2.jpg" alt="heartland autobody web">
+      <img src="../img/heartland2.jpg" alt="heartland autobody web design">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/heartland3.jpg" alt="heartland autobody web">
+      <img src="../img/heartland3.jpg" alt="heartland autobody web design">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/heartland4.jpg" alt="heartland autobody web">
+      <img src="../img/heartland4.jpg" alt="heartland autobody web design">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/heartland5.jpg" alt="heartland autobody web">
+      <img src="../img/heartland5.jpg" alt="heartland autobody web design">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/heartland6.jpg" alt="heartland autobody web">
+      <img src="../img/heartland6.jpg" alt="heartland autobody web design">
     </div>
   </div>
 
