--- a/projects/nra.html
+++ b/projects/nra.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <link rel="stylesheet" type="text/css" href="../css/fonts/stylesheet.css"/>
+
+    <link rel="shortcut icon" type="image/png" href="../img/logo-tab.png">
+    
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -15,13 +18,13 @@
 
 <!-- Off Canvas Menu -->
 <nav id="menu">
-    <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
+    <a href="#menu" class="menu-link"><img src="../img/menu-icon.png" alt="menu"></a>
         <ul>
           <li><a class="sub-link" href="../index.html"><img src="../img/logo-color.svg" alt="logo"></a></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
-          <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
+          <li><a class="sub-link" href="../index.html#thepassion">MY PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
-          <li><a class="sub-link" href="../index.html#mydrive">MY DRIVE</a></li>
+          <li><a class="sub-link" href="../index.html#mydrive">WHAT DRIVES ME</a></li>
           <li><a class="sub-link" href="../index.html#talkdesign">LET'S TALK DESIGN</a></li>
         </ul>
 </nav>
@@ -32,9 +35,9 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
+      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg" alt="logo"></a></div>
       <div class="large-10 medium-10 small-10 columns">
-        <h3 id="project-header">National Rifle Association</h3>
+        <h2>National Rifle Association</h2>
         <div class="large-12 medium-12 hide-for-small-only columns"><hr></div>
       </div>
     </div>
@@ -45,33 +48,33 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Social Activism Campaign: <p id="inline-text">Print</p>
+        <h6>Social Activism Campaign: </h6><p id="inline-text">Print</p>
         <p>The association was seeking a campaign that would spark interest in the different areas of rifle safety education offered. The target audience, males between ages 18 and 33, are prime to market to due to their eligibility to participate in firearm related activities.</p>
       </div>
-    </div> 
+    </div>
 
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img data-interchange="[../img/nra1-small.jpg, (default)], [../img/nra1.jpg, (medium)], [../img/nra1.jpg, (large)]" alt="national rifle association">
+      <img data-interchange="[../img/nra1-small.jpg, (default)], [../img/nra1.jpg, (medium)], [../img/nra1.jpg, (large)]" alt="national rifle association poster design">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/nra2.jpg" alt="national rifle association">
+      <img src="../img/nra2.jpg" alt="national rifle association handbill design">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/nra3.jpg" alt="national rifle association">
+      <img src="../img/nra3.jpg" alt="national rifle association sticker design">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/nra4.jpg" alt="national rifle association">
+      <img src="../img/nra4.jpg" alt="national rifle association t-shirt design">
     </div>
   </div>
 
