--- a/projects/pinnacle.html
+++ b/projects/pinnacle.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <link rel="stylesheet" type="text/css" href="../css/fonts/stylesheet.css"/>
+
+    <link rel="shortcut icon" type="image/png" href="../img/logo-tab.png">
+    
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -15,13 +18,13 @@
 
 <!-- Off Canvas Menu -->
 <nav id="menu">
-    <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
+    <a href="#menu" class="menu-link"><img src="../img/menu-icon.png" alt="menu"></a>
         <ul>
           <li><a class="sub-link" href="../index.html"><img src="../img/logo-color.svg" alt="logo"></a></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
-          <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
+          <li><a class="sub-link" href="../index.html#thepassion">MY PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
-          <li><a class="sub-link" href="../index.html#mydrive">MY DRIVE</a></li>
+          <li><a class="sub-link" href="../index.html#mydrive">WHAT DRIVES ME</a></li>
           <li><a class="sub-link" href="../index.html#talkdesign">LET'S TALK DESIGN</a></li>
         </ul>
 </nav>
@@ -31,9 +34,9 @@
 <div class="container">
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
+      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg" alt="logo"></a></div>
       <div class="large-10 medium-10 small-10 columns">
-        <h3 id="project-header">Pinnacle Bank Arena</h3>
+        <h2>Pinnacle Bank Arena</h2>
         <div class="large-12 medium-12 hide-for-small-only columns"><hr></div>
       </div>
     </div>
@@ -44,7 +47,7 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h6>Ticket Application: <p id="inline-text">Mobile</p>
+        <h6>Ticket Application: </h6><p id="inline-text">Mobile</p>
         <p>The Pinnacle Bank Arena is a new establishment in Lincoln, Nebraska that hosts sporting events and all types of entertainment. The Arena was looking for a way to better handle the process of selling tickets a mobile application. Generation Y, of whom 60% download mobile applications, is the primary audience for this application.</p>
       </div>
     </div> 
