--- a/projects/afan.html
+++ b/projects/afan.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <link rel="stylesheet" type="text/css" href="../css/fonts/stylesheet.css"/>
+
+    <link rel="shortcut icon" type="image/png" href="../img/logo-tab.png">
+    
     <script src="../js/vendor/modernizr.js"></script>
 
   </head>
@@ -15,13 +18,13 @@
 
 <!-- Off Canvas Menu -->
 <nav id="menu">
-    <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
+    <a href="#menu" class="menu-link"><img src="../img/menu-icon.png" alt="menu"></a>
         <ul>
           <li><a class="sub-link" href="../index.html"><img src="../img/logo-color.svg" alt="logo"></a></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
-          <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
+          <li><a class="sub-link" href="../index.html#thepassion">MY PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
-          <li><a class="sub-link" href="../index.html#mydrive">MY DRIVE</a></li>
+          <li><a class="sub-link" href="../index.html#mydrive">WHAT DRIVES ME</a></li>
           <li><a class="sub-link" href="../index.html#talkdesign">LET'S TALK DESIGN</a></li>
         </ul>
 </nav>
@@ -33,9 +36,9 @@
 
 
     <div class="row">
-      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg"></a></div>
+      <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg" alt="logo"></a></div>
       <div class="large-10 medium-10 small-10 columns">
-        <h3 id="project-header">Alliance for the Future of Agriculture in Nebraska (A-FAN)</h3>
+        <h2>Alliance for the Future of Agriculture in Nebraska (A-FAN)</h2>
         <div class="large-12 medium-12 hide-for-small-only columns"><hr></div>
       </div>
     </div>
@@ -61,19 +64,19 @@
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/afan2.jpg" alt="alliance for the future of agriculture beef"> 
+      <img src="../img/afan2.jpg" alt="alliance for the future of agriculture beef print layout"> 
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/afan3.jpg" alt="alliance for the future of agriculture pork">
+      <img src="../img/afan3.jpg" alt="alliance for the future of agriculture pork print layout">
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 medium-12 small-12 column project-img">
-      <img src="../img/afan4.jpg" alt="alliance for the future of agriculture poultry">
+      <img src="../img/afan4.jpg" alt="alliance for the future of agriculture poultry print layout">
     </div>
   </div>
 
