--- a/projects/starbucks.html
+++ b/projects/starbucks.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <link rel="stylesheet" type="text/css" href="../css/fonts/stylesheet.css"/>
+
+    <link rel="shortcut icon" type="image/png" href="../img/logo-tab.png">
+
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -17,13 +20,13 @@
 
 <!-- Off Canvas Menu -->
 <nav id="menu">
-    <a href="#menu" class="menu-link"><img src="../img/menu-icon.svg" alt="menu"></a>
+    <a href="#menu" class="menu-link"><img src="../img/menu-icon.png" alt="menu"></a>
         <ul>
           <li><a class="sub-link" href="../index.html"><img src="../img/logo-color.svg" alt="logo"></a></li>
           <li><a class="sub-link" href="../index.html">HOME</a></li>
-          <li><a class="sub-link" href="../index.html#thepassion">THE PASSION</a></li>
+          <li><a class="sub-link" href="../index.html#thepassion">MY PASSION</a></li>
           <li><a class="sub-link" href="../index.html#justme">JUST ME</a></li>
-          <li><a class="sub-link" href="../index.html#mydrive">MY DRIVE</a></li>
+          <li><a class="sub-link" href="../index.html#mydrive">WHAT DRIVES ME</a></li>
           <li><a class="sub-link" href="../index.html#talkdesign">LET'S TALK DESIGN</a></li>
         </ul>
 </nav>
@@ -36,7 +39,7 @@
     <div class="row">
       <div class="large-2 medium-2 small-2 logo columns"><a class="sub-link" href="../index.html"><img src="../img/logo.svg" alt="logo"></a></div>
       <div class="large-10 medium-10 small-10 columns">
-        <h3 id="project-header">Starbucks</h3>
+        <h2>Starbucks</h2>
         <div class="large-12 medium-12 hide-for-small-only columns"><hr></div>
       </div>
     </div>
