Fixing Landing Page Content
Revised the landing page copy in the intro and about me paragraph.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="large-5 medium-5 large-offset-6 medium-offset-6 small-10 columns end the-passion">
-        <p>What does it mean to design? It means everday I get to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and chances to grow. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—edition<b>h</b>.</p>
+        <p>What does it mean to design? It means everyday I get to express my passion for all things in a creative and purposeful way. With the infinite combinations of type and image possible and messages to communicate, each project brings new challenges and chances to grow. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—edition<b>h</b>.</p>
       </div>
   </div> 
 
@@ -222,7 +222,7 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 columns end">
-        <p>Hello! My name is Dakotah Buchli, but my designer name is edition<b>h</b>. I am a small-town girl, born and raised just west of Lincoln, Nebraska. I have a passion for all things creative and thrive off of the opportunity to explore new things within the design world. I am a quick learner with the drive and determination to complete any task I put my mind to. I am most interested in the areas of print, typography, and photography, but am also finding a new love in web design. I value honesty and integrity in relationships and enjoy working with and around other people. </p>
+        <p>Hello! My name is Dakotah Buchli, but my designer name is edition<b>h</b>. I am a small-town girl, born and raised just west of Lincoln, Nebraska. I have a passion for all things creative and thrive off of the opportunity to explore new things within the design world. I am a quick learner with the drive and determination to complete any task I put my mind to. I am most interested in the areas of print, typography, and photography, but am also finding a new love in web design.</p>
       </div>
     </div> 
 
